# AutoNetLab

./: README.md  pyproject.toml
autonetlab/core/: config_manager.py  device_manager.py  topology.py
autonetlab/utils/: logger.py
templates/: example_topology.yaml  ospf_basic.txt  ospf_example_variables.yaml
templates/custodia_dns_firewall/: dns_firewall.yaml
